# shm-vs-loopback-bench

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
demo/: __init__.py  requirements.txt
demo/api/: __init__.py  main.py  runner.py
demo/frontend/: app.py
demo/replays/: sample_latency.json
scripts/: bench_docker_runs.py  docker-entrypoint-api.sh  docker-entrypoint-demo-ui.sh  docker-entrypoint.sh
src/: main.cpp
src/common/: benchmark_json.h  benchmark_options.h  latency_stats.h  quote.h  ringbuffer.cpp  ringbuffer.h  tsc_clock.cpp  tsc_clock.h
src/publisher/: publisher.cpp  publisher.h  xorshift.h
src/subscriber-l/: subscriber.cpp  subscriber.h
src/subscriber-s/: subscriber.cpp  subscriber.h
